--- a/ITS_demo/templates/Mixed_fraction.html
+++ b/ITS_demo/templates/Mixed_fraction.html
@@ -70,10 +70,26 @@ function check0()
     }
 	 else
 	 {
-	 feedcount++;
-        $(x[0]).hide();
-        $(y[0]).show();
-	    document.getElementsByTagName("input")[0].value = "";
+    if(document.getElementsByTagName("input")[0].value!=""){
+       feedcount++;
+              $(x[0]).hide();
+              $(y[0]).show();
+            document.getElementsByTagName("input")[0].value = "";
+            swal({
+              title: "Oops, Looks like you divided wrong ",
+              text: "for example, if you divide 9/4 then quotient is 2 and remainder is 9-(4*2) = 1",
+              icon: "error",
+              button: true,
+              dangerMode: true,
+            })
+            .then((willDelete) => {
+              if (willDelete) {
+                swal("Now try again", {
+                  icon: "success",
+                });
+              }
+            });
+    }
 	 }
 }
 
@@ -89,24 +105,26 @@ function check1()
     }
 	 else
 	 {
-	 feedcount++;
-	    $(x[1]).hide();
-        $(y[1]).show();
-	    document.getElementsByTagName("input")[1].value = "";
-	    swal({
-  title: "Oops, Looks like you divided wrong ",
-  text: "for example, if you divide 9/4 then quotient is 2 and remainder is 9-(4*2) = 1",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+    if(document.getElementsByTagName("input")[1].value!=""){
+          feedcount++;
+              $(x[1]).hide();
+                $(y[1]).show();
+              document.getElementsByTagName("input")[1].value = "";
+              swal({
+          title: "Oops, Looks like you divided wrong ",
+          text: "for example, if you divide 9/4 then quotient is 2 and remainder is 9-(4*2) = 1",
+          icon: "error",
+          button: true,
+          dangerMode: true,
+        })
+        .then((willDelete) => {
+          if (willDelete) {
+            swal("Now try again", {
+              icon: "success",
+            });
+          }
+        });
+      }
 	 }
 }
 
@@ -119,24 +137,26 @@ function check2()
 	  }
 	else
 	{
-	feedcount++;
-	    $(x[3]).hide();
-        $(y[3]).show();
-        document.getElementsByTagName("input")[3].value = "";
-        swal({
-  title: "Oops, Looks like you are confused in the format",
-  text: "Whole number in mixed fraction is the quotient you got in the first step",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+    if(document.getElementsByTagName("input")[3].value!=""){
+      feedcount++;
+              $(x[3]).hide();
+                $(y[3]).show();
+                document.getElementsByTagName("input")[3].value = "";
+                swal({
+          title: "Oops, Looks like you are confused in the format",
+          text: "Whole number in mixed fraction is the quotient you got in the first step",
+          icon: "error",
+          button: true,
+          dangerMode: true,
+        })
+        .then((willDelete) => {
+          if (willDelete) {
+            swal("Now try again", {
+              icon: "success",
+            });
+          }
+        });
+      }
     }
 }
 
@@ -149,24 +169,26 @@ function check3()
 	}
 	else
 	{
-	feedcount++;
-	    $(x[2]).hide();
-        $(y[2]).show();
-	    document.getElementsByTagName("input")[2].value = "";
-	    swal({
-  title: "Oops, Looks like you are confused in the format",
-  text: "In mixed fraction, numerator is remainder you got in first step",
-  icon: "error",
-  button: true,
-  dangerMode: true,
-})
-.then((willDelete) => {
-  if (willDelete) {
-    swal("Now try again", {
-      icon: "success",
-    });
-  }
-});
+  if(document.getElementsByTagName("input")[2].value!=""){
+      feedcount++;
+            $(x[2]).hide();
+              $(y[2]).show();
+            document.getElementsByTagName("input")[2].value = "";
+            swal({
+        title: "Oops, Looks like you are confused in the format",
+        text: "In mixed fraction, numerator is remainder you got in first step",
+        icon: "error",
+        button: true,
+        dangerMode: true,
+      })
+      .then((willDelete) => {
+        if (willDelete) {
+          swal("Now try again", {
+            icon: "success",
+          });
+        }
+      });
+    }
 	}
 }
 
