--- a/ITS_demo/templates/layout_new.html
+++ b/ITS_demo/templates/layout_new.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> 
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Practice</title>
-    
+
     <style>
         .blue {
          background-color: #0070BB;
@@ -25,12 +25,12 @@
        }
 
          #n1 {
-            position: fixed; 
+            position: fixed;
             height:calc(100%-200px);
             width: 100vw;
             top:0;
             left: 0;
-            z-index: 9999; 
+            z-index: 9999;
             /* background-color: #3A6351!important; */
             /* TRIAL */
             /* background-color: #F5E6CA!important;   */
@@ -38,7 +38,7 @@
 
         .navbar-brand,.nav-link{
             color: #fff !important;
-            
+
         }
         .main{
             margin-top: 70px;
@@ -232,7 +232,7 @@
 
     <div class="container main">
         <div class="card">
-          
+
             <div class="card-header white" style="color: #0070BB; background-color:rgba(0,0,0,.03);">
               <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
               <!-- <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="card" aria-label="Close"></button> -->
@@ -248,11 +248,11 @@
         </div>
         <div class = "time-card">
           <div class="card-body" style="width: 80%;">
-          
+
               {% block content %}{% endblock %}
-              
+
             </div>
-         
+
           </div>
 
           <!-- </div> -->
@@ -262,7 +262,7 @@
                 <div class="modal-header">
                   <h4 class="modal-title">Hint</h4>
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  
+
                 </div>
                 <div class="modal-body">
                   <p>Select the option you think would be the beginning step of this problem</p>
@@ -280,8 +280,8 @@
               </div>
             </div>
         </div>
-       
-        <div class="container" style="margin-left: 65%;">        
+
+        <div class="container" style="margin-left: 65%;">
           <div class="toast" data-autohide="false" id="mytoast">
             <div class="toast-header">
               <strong class="mr-auto text-primary">Correct</strong>
@@ -293,12 +293,12 @@
             </div>
           </div>
         </div>
-        
-        
+
+
 
             <div class="card-footer text-muted green">
                 <a href="#" class="btn btn-info" data-toggle="modal" data-target="#myModal" id="hint-btn">Hint</a>
-                
+
                 <i class="bi bi-circle-fill right"></i>
                 <i class="bi bi-circle-fill"></i>
                 <i class="bi bi-circle-fill"></i>
@@ -308,14 +308,14 @@
           </div>
       </div>
       <script>
-        
+
         $(document).ready(function(){
             $('.toast').toast('hide');
             var x = sessionStorage.count;
             console.log(x);
             for(i = 0;i < Number(sessionStorage.count);i++){
               document.getElementsByClassName("bi")[i].classList.add("done");
-            }  
+            }
 
 
             $('#home_nav').click(function(){
@@ -325,19 +325,19 @@
                   } else {
                     return false;
                   }
-                  
+
                   let keys = Object.keys(sessionStorage);
                   for(let key of keys) {
                     sessionStorage.removeItem(`${key}`);
                   }
                   sessionStorage.removeItem(count);
               }
-              
+
             })
 
             var quesid = "{{ answer.qid }}";
             var data = {qid: quesid};
-            
+
             var hint_count = 0;
             $('#hint-btn').click(function(){
               hint_count++;
@@ -354,14 +354,14 @@
               } else {
                 sessionStorage.count = 1;
               }
-              
-              
+
+
               let score = 25 - (5*hint_count);
               sessionStorage.setItem(x, score);
               console.log(sessionStorage.getItem(x));
-         
+
               if(sessionStorage.count == 4){
-                
+
                 let keys = Object.keys(sessionStorage);
                 for(let key of keys) {
                   data[`${key}`]= `${sessionStorage.getItem(key)}`;
@@ -370,22 +370,34 @@
                 sessionStorage.removeItem('count');
                 console.log(data);
 
-              alert("Excellent!  You finished all 4 questions");
-              $.post('/score', {'data': data}, function(response){
-                  window.location = "{{url_for('home')}}";
-                });
-                
-
-
-              }
+                alert("Excellent!  You finished all 4 questions");
+                    $.ajax({
+                  url: '/score',
+                  data: JSON.stringify(data),
+                  type: 'POST',
+                  success: function(response) {
+                    console.log("Success");
+                    console.log(response);
+                      window.location.href = "{{ url_for('home') }}";
+                  },
+                  error: function(error) {
+                      console.log(error);
+                      window.location.href = "{{ url_for('home') }}";
+                  }
+              });
+                // $.post('/score', {'data': data}, function(response){
+                //     window.location.href = "{{url_for('home')}}";
+                //     return false;
+                //   });
+                }
               else{
                 setTimeout(function(){ location.reload() }, 3000);
               }
-              
-              
+
+
             })
         })
-      
+
         </script>
 
 </body>
