--- a/ITS_demo/templates/layout_new_easy.html
+++ b/ITS_demo/templates/layout_new_easy.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>  
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/> 
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Practice</title>
-    
+
     <style>
   .blue {
          background-color: #0070BB;
@@ -27,12 +27,12 @@
        }
 
          #n1 {
-            position: fixed; 
+            position: fixed;
             height:calc(100%-200px);
             width: 100vw;
             top:0;
             left: 0;
-            z-index: 9999; 
+            z-index: 9999;
             /* background-color: #3A6351!important; */
             /* TRIAL */
             /* background-color: #F5E6CA!important;   */
@@ -40,7 +40,7 @@
 
         .navbar-brand,.nav-link{
             color: #fff !important;
-            
+
         }
         .main{
             margin-top: 70px;
@@ -233,11 +233,11 @@
 
     <div class="container main">
         <div class="card">
-          
+
             <div class="card-header white" style="color: #0070BB; background-color:rgba(0,0,0,.03);">
               <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
             </div>
-            
+
             <div class="card1">
               <ul id="progressbar" class="text-center">
                   <li class="step0"></li>
@@ -246,62 +246,15 @@
                   <li class="step0"></li>
               </ul>
           </div>
-            
+
             <div class = "time-card">
-              
+
             <div class="card-body" style="width: 80%;">
-              
+
               <!-- <h5 class="card-title">{% block question %}{% endblock %}</h5> -->
               {% block content %}{% endblock %}
-              
-              <!-- <h6 class="card-text">5 <br> --- <br> 6</h6> -->
-              <!-- <div class="line1">
-                <label for="quo" >Quotient:</label>
-                <input type="text" id="quo" name="quo" maxlength="2" size="2" onblur="check0();">
-                <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-                <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
-                <br><br>
-            </div> -->
-            
-            <!-- <div class="line1">
-                <label for="rem">Remainder:</label>
-                <input type="text" id="rem" name="rem" maxlength="2" size="2" onblur="check1();">
-                <img src="{{ url_for('static', filename='images/tick.png') }}" width="32px" height="22px" class="correct">
-                <img src="{{ url_for('static', filename='images/cross.jpg') }}" width="32px" height="22px" class="wrong">
-                <br><br>
-              </div>
-              <table>
-                <tr> -->
-        <!--               numerator-->
-                    <!-- <td></td>
-                    <td><input type="text" id="mf2" name="mf" maxlength="2" size="2" onblur="check3();" required></td>
-                    <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td>
-                    <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td>
-                </tr>
-        
-                <tr>
-         -->
-        <!--                mixed fraction-->
-                    <!-- <td><input type="text" id="mf1" name="mf" maxlength="2" size="2" onblur="check2();"required></td>
-                    <td><hr/></td>
-                    <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td>
-                    <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td>
-        
-                </tr>
-        
-                <tr> -->
-        <!--                denominator-->
-                    <!-- <td></td>
-                    <td><input type="text" id="mf3" name="mf" maxlength="2" size="2" onblur="check4();" required></td>
-                    <td><img src="{{ url_for('static', filename='images/tick.png') }}" width="50px" height="50px" class="correct"></td>
-                    <td><img src="{{ url_for('static', filename='images/cross.jpg') }}" width="50px" height="50px" class="wrong"></td>
-                </tr>
-                <label for="mf1">Mixed Fraction:</label>
-                <br>
-            </table> -->
-              
             </div>
-         
+
           </div>
 
           <!-- </div> -->
@@ -311,7 +264,7 @@
                 <div class="modal-header">
                   <h4 class="modal-title">Hint</h4>
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  
+
                 </div>
                 <div class="modal-body">
                   {% block hint %}{% endblock %}
@@ -328,8 +281,8 @@
               </div>
             </div>
         </div>
-       
-        <div class="container" style="margin-left: 65%;">        
+
+        <div class="container" style="margin-left: 65%;">
           <div class="toast" data-autohide="false" id="mytoast">
             <div class="toast-header">
               <strong class="mr-auto text-primary">Correct</strong>
@@ -341,12 +294,12 @@
             </div>
           </div>
         </div>
-        
-        
+
+
 
             <div class="card-footer text-muted green">
                 <a href="#" class="btn btn-info" data-toggle="modal"  data-target="#myModal" id="hint-btn">Hint</a>
-                
+
                 <i class="bi bi-circle-fill right"></i>
                 <i class="bi bi-circle-fill"></i>
                 <i class="bi bi-circle-fill"></i>
@@ -355,81 +308,6 @@
             </div>
           </div>
       </div>
-      <!-- <script>
-        var arrayFromStroage = JSON.parse(localStorage.getItem("textValues"));
-        var arrayLength = arrayFromStroage.length;
-        var total_score = 0;
-        if(localStorage.getItem('textValues') == null || arrayLength >= 4){
-          if(arrayLength == 4){
-            const reducer = (accumulator, curr) => accumulator + curr;
-            total_score = arrayFromStroage.reduce(reducer);
-            // var myArray =[];
-            
-          }
-          var myArray =[];
-        }
-        else{
-          myArray =  JSON.parse(localStorage.getItem('textValues'));
-        }
-
-        console.log(myArray);
-
-        var hint_count = 0;
-        var quesid = "{{ easy.qid }}";
-
-        function addItemToArray(){
-          let score = 25 - (5*hint_count);
-          myArray.push(score);
-          localStorage.setItem('textValues', JSON.stringify(myArray));
-        }
-
-        $(document).ready(function(){
-          $('.toast').toast('hide');
-          console.log(arrayLength);
-          if(arrayLength < 4){
-            for(i = 0;i < arrayLength;i++){
-              document.getElementsByClassName("bi")[i].classList.add("done");
-            }  
-          }
-        
-          $('#hint-btn').click(function(){
-            hint_count++;
-          })
-           
-          $('#next-btn').click(function(){
-            $('.toast').toast('show');
-            addItemToArray();
-            if(arrayLength == 4){
-              var data = {qid: quesid, score: total_score};
-              $.post('/score', {'data': data}, function(response){
-                window.location = "{{url_for('home')}}";
-              });
-
-
-              $.ajax({
-                  type: 'POST',
-                  url: '/score',
-                  contentType: 'application/json; charset=utf-8',
-                  data: JSON.stringify({'data': data}),
-                  dataType: 'json',
-                  success: function(response){
-                    return location.replace("{{url_for('home')}}");
-                  }
-              });
-
-
-              event.preventDefault();
-            }
-            else{
-              setTimeout(function(){ location.reload() }, 1000);      
-            }
-                  
-          });
-        });
-        </script> -->
-
-
-
         <script>
 
           $(document).ready(function(){
@@ -438,7 +316,7 @@
             console.log(x);
             for(i = 0;i < Number(sessionStorage.count);i++){
               document.getElementsByClassName("bi")[i].classList.add("done");
-            }  
+            }
 
 
             $('#home_nav').click(function(){
@@ -449,19 +327,18 @@
                   } else {
                     return false;
                   }
-                  
+
                   let keys = Object.keys(sessionStorage);
                   for(let key of keys) {
                     sessionStorage.removeItem(`${key}`);
                   }
                   sessionStorage.removeItem(count);
               }
-              
+
             })
 
             var quesid = "{{ easy.qid }}";
             var data = {qid: quesid};
-            
             var hint_count = 0;
             $('#hint-btn').click(function(){
               hint_count++;
@@ -479,16 +356,13 @@
               } else {
                 sessionStorage.count = 1;
               }
-              
-              
+
+
               let score = 25 - (5*hint_count);
               sessionStorage.setItem(x, score);
               console.log(sessionStorage.getItem(x));
-              // data[x]= sessionStorage.getItem(x);
-              // console.log(data);
-              // sessionStorage.removeItem(x);
               if(sessionStorage.count == 4){
-                
+
                 let keys = Object.keys(sessionStorage);
                 for(let key of keys) {
                   data[`${key}`]= `${sessionStorage.getItem(key)}`;
@@ -497,15 +371,34 @@
                 sessionStorage.removeItem('count');
                 console.log(data);
 
-                
+
               alert("Excellent!  You finished all 4 questions");
-              $.post('/score', {'data': data}, function(response){
-                  window.location = "{{url_for('home')}}";
-                });
-              }
+
+                    $.ajax({
+                  url: '/score',
+                  data: JSON.stringify(data),
+                  type: 'POST',
+                  success: function(response) {
+                    console.log("Success");
+                    console.log(response);
+                      window.location.href = "{{ url_for('home') }}";
+                  },
+                  error: function(error) {
+                      console.log(error);
+                      window.location.href = "{{ url_for('home') }}";
+                  }
+              });
+            }
+              // $.post('/score', {'data': data}, function(){
+              //   // console.log(response);
+              //     location.replace('/home');
+              //     console.log("Trying to go home");
+              //     // return false;
+              //   });
+              // }
               else{
                 setTimeout(function(){ location.reload() }, 3000);
-              } 
+              }
             })
         })
         </script>
