--- a/ITS_demo/templates/UserScore.html
+++ b/ITS_demo/templates/UserScore.html
@@ -75,12 +75,13 @@
                           <h6 class="mb-0">School Name</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                          (239) 816-9029
+                          D.J.Sanghvi
                         </div>
                       </div>
                       <hr>
                       <div class="row">
                         <div class="col-sm-3">
+                          
                           <h6 class="mb-0">Grade</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
@@ -99,78 +100,115 @@
                       <hr>
                       <div class="row">
                         <div class="col-sm-12">
-                          <a class="btn btn-info "  href="./EditUserScore.html">Edit</a>
+                          <a class="btn btn-info "  href="EditUserScore.html">Edit</a>
                         </div>
                       </div>
                     </div>
                   </div>
     
                   <div class="row gutters-sm">
-                    <div class="col-sm-6 mb-3">
-                      <div class="card h-100">
-                        <div class="card-body">
-                          <!-- <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Algebra</h6>
-                          <small>Web Design</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>Website Markup</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>One Page</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>Mobile Template</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>Backend API</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div> -->
-                          
-                          <div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
-
-
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-6 mb-3">
-                      <div class="card h-100">
-                        <div class="card-body">
-                          <!-- <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Fraction</h6>
-                          <small>Web Design</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>Website Markup</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>One Page</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>Mobile Template</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
-                          <small>Backend API</small>
-                          <div class="progress mb-3" style="height: 5px">
-                            <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div> -->
-                          <div id='myDiv2'><!-- Plotly chart will be drawn inside this DIV --></div>
-
-
-                        </div>
-                      </div>
-                    </div>
+                    
+                    
                   </div>
     
     
     
+                </div>
+                <div class="container-fluid">
+                  <div class="row">
+                    <div class="col-md-6 mb-3">
+                      <div class="card h-100">
+                        <h1 class="card-title">Algebra</h1>
+                        <div class="card-body">
+                        
+                          <div id='myDiv2'><!-- Plotly chart will be drawn inside this DIV --></div>
+  
+  
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                      <div class="card h-100">
+                        <h1 class="card-title">Fraction</h1>
+                        <div class="card-body">
+                          
+                          
+                          <div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
+  
+  
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <h6 class="d-flex align-items-center mb-3 "><i class="material-icons text-info mr-2"></i>Algebra</h6>
+                      <small>Coefficient</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Value of Expression</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Classification</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Identification</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Horizontal Addition</small>
+                      <div class="progress mb-3" style="height: 5px">
+                        <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                      </div>
+                      <small>Vertical Subtraction</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                      <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Fraction</h6>
+                        <small>Simplest Form</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Division</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Operation</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Multiplication</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Mixed Fraction</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Compare</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Normal Form</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Fraction Division</small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                        <small>Fraction Operation </small>
+                        <div class="progress mb-3" style="height: 5px">
+                          <div class="progress-bar bg-primary" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                  </div>
                 </div>
               </div>
     
@@ -187,9 +225,15 @@
 <!-- Chart code -->
 <script src='https://cdn.plot.ly/plotly-2.3.1.min.js'></script>
 <script>
-  var data = [{
-  values: [19, 26, 55],
-  labels: ['Residential', 'Non-Residential', 'Utility'],
+  var fraction = [{
+  values: [2,2,3,2],
+  labels: ['Easy','Easy Incomplete', 'Intermediate','Indermediate InComplete'],
+  type: 'pie'
+}];
+
+var algebra = [{
+  values: [3,1,1,1],
+  labels: ['Easy','Easy Incomplete', 'Intermediate','Indermediate InComplete'],
   type: 'pie'
 }];
 
@@ -198,9 +242,9 @@ var layout = {
   width: 500
 };
 
-Plotly.newPlot('myDiv', data, layout);
+Plotly.newPlot('myDiv', fraction, layout);
 
-Plotly.newPlot('myDiv2', data, layout);
+Plotly.newPlot('myDiv2', algebra, layout);
 
 </script>
 
