--- a/fractions/templates/layout_easy0.html
+++ b/fractions/templates/layout_easy0.html
@@ -123,34 +123,34 @@
   </div>
   <script>
       window.onload = (event) => {
-        sessionStorage.removeItem('key');
+        localStorage.removeItem('key');
     };
 
     $(document).ready(function() {
       $('.toast').toast('hide');
-      var x = sessionStorage.count;
+      var x = localStorage.count;
       console.log("count " + x);
-      if(Number(sessionStorage.count) > 4){
-        sessionStorage.count = 0;
+      if(Number(localStorage.count) > 4){
+        localStorage.count = 0;
       }
-      for (i = 0; i < Number(sessionStorage.count); i++) {
+      for (i = 0; i < Number(localStorage.count); i++) {
         document.getElementsByClassName("bi")[i].classList.add("done");
       }
 
 
       $('#home_nav').click(function() {
-        if (sessionStorage.count < 4 || sessionStorage.count == null) {
+        if (localStorage.count < 4 || localStorage.count == null) {
           if (confirm("Your score will not be saved")) {
             $('#home_nav').attr('href', "{{ url_for('home_bp.home') }}");
           } else {
             return false;
           }
 
-          let keys = Object.keys(sessionStorage);
+          let keys = Object.keys(localStorage);
           for (let key of keys) {
-            sessionStorage.removeItem(`${key}`);
+            localStorage.removeItem(`${key}`);
           }
-          sessionStorage.removeItem(count);
+          localStorage.removeItem(count);
         }
 
       })
@@ -175,24 +175,24 @@
 
       $('#next-btn').click(function() {
         $('.toast').toast('show');
-        if (sessionStorage.count) {
-          sessionStorage.count = Number(sessionStorage.count) + 1;
+        if (localStorage.count) {
+          localStorage.count = Number(localStorage.count) + 1;
         } else {
-          sessionStorage.count = 1;
+          localStorage.count = 1;
         }
 
 
         let score = 25 - (5 * hint_count);
-        sessionStorage.setItem(x, score);
-        console.log(sessionStorage.getItem(x));
-        if (sessionStorage.count == 4) {
-          console.log(sessionStorage.count);
-          let keys = Object.keys(sessionStorage);
+        localStorage.setItem(x, score);
+        console.log(localStorage.getItem(x));
+        if (localStorage.count == 4) {
+          alert(localStorage.count);
+          let keys = Object.keys(localStorage);
           for (let key of keys) {
-            data[`${key}`] = `${sessionStorage.getItem(key)}`;
-            sessionStorage.removeItem(`${key}`);
+            data[`${key}`] = `${localStorage.getItem(key)}`;
+            localStorage.removeItem(`${key}`);
           }
-          sessionStorage.removeItem('count');
+          localStorage.removeItem('count');
           console.log(data);
 
 
