--- a/fractions/templates/layout.html
+++ b/fractions/templates/layout.html
@@ -168,7 +168,7 @@
         });
       })
 
-      $('#next-btn').click(function() {
+      $('#next-btn').click(function(event) {
         $('.toast').toast('show');
         if (sessionStorage.count) {
           sessionStorage.count = Number(sessionStorage.count) + 1;
@@ -188,6 +188,8 @@
             data[`${key}`] = `${sessionStorage.getItem(key)}`;
             sessionStorage.removeItem(`${key}`);
           }
+          // event.preventDefault();
+          // event.stopPropagation();
           sessionStorage.removeItem('count');
           console.log(data);
           $.get('/endTime', {
@@ -206,10 +208,11 @@
               console.log("Success");
               console.log(response);
               window.location.href = "{{ url_for('home_bp.home') }}";
+
             },
             error: function(error) {
               console.log(error);
-              window.location.href = "{{ url_for('home_bp.home') }}";
+               window.location.href = "{{ url_for('home_bp.home') }}";
             }
           });
 
