--- a/home/templates/UserScore.html
+++ b/home/templates/UserScore.html
@@ -100,7 +100,7 @@
                       <hr>
                       <div class="row">
                         <div class="col-sm-12">
-                          <a class="btn btn-info "  href="EditUserScore.html">Edit</a>
+                          <a class="btn btn-info "  href="{{ url_for('home_bp.EditUserScore') }}">Edit</a>
                         </div>
                       </div>
                     </div>
