--- a/algebra/templates/algebra2.html
+++ b/algebra/templates/algebra2.html
@@ -1,10 +1,11 @@
 {% extends "layout_easy.html" %}
 {% block script %}
-window.onload = function(){
+$( document ).ready(function() {
   monobitri = ["","Monomial", "Binomial", "Trinomial"];
   likeunlike = ["", "Like", "Unlike"];
   var source = "{{ url_for('static', filename = 'images/mono_bio_trio.png') }}";
-  if({{ easy.num }} == '2'){
+  if({{ easy.num }} == '2')
+  {
     monobitri = likeunlike;
     source = "{{ url_for('static', filename = 'images/like_unlike.png') }}";
   }
@@ -18,7 +19,7 @@ window.onload = function(){
       select[j].appendChild(el);
     }
   }
-}
+});
 var ans=[ "{{ easy.answer[0] }}", "{{ easy.answer[1] }}", "{{ easy.answer[2] }}", "{{ easy.answer[3] }}" ];
 function check(i){
   if(document.getElementsByTagName("select")[i].value==ans[i]) {
@@ -40,6 +41,7 @@ function check(i){
 {% endblock %}
 {% block chapter %}Algebra{% endblock %}
 {% block topic %}{{ easy.topic }}{% endblock %}
+
 {% block content %}
 <div>{{ easy.question }}</div>
 <p>
@@ -53,8 +55,4 @@ function check(i){
   </div>
   {% endfor %}
 </p>
-{% endblock %}
-
-{% block hint %}
-  <img src="" alt="" id="hint_img" style="width: 80%;">
 {% endblock %}
