--- a/algebra/templates/layout_easy.html
+++ b/algebra/templates/layout_easy.html
@@ -77,7 +77,9 @@
 
             </div>
             <div class="modal-body">
-              {% block hint %}{% endblock %}
+              {{% block hint %}
+              <img src="" alt="" style="width:80%;" id="hint_img">
+              {% endblock %}
               <!-- <p>Select the option you think would be the beginning step of this problem</p>
                   <button class="btn btn-info" style="width: 100%; margin: 10px auto;">Option 1</button>
                   <button class="btn btn-info" style="width: 100%; margin: 10px auto;">Option 1</button>
@@ -162,7 +164,7 @@
 
       })
 
-      $('#next-btn').click(function() {
+      $('#next-btn').click(function(event) {
         $('.toast').toast('show');
         if (sessionStorage.count) {
           sessionStorage.count = Number(sessionStorage.count) + 1;
@@ -174,8 +176,8 @@
         let score = 25 - (5 * hint_count);
         sessionStorage.setItem(x, score);
         console.log(sessionStorage.getItem(x));
-        if (sessionStorage.count == 4) {
-
+        if (sessionStorage.count >= 4) {
+          console.log(sessionStorage.count);
           let keys = Object.keys(sessionStorage);
           for (let key of keys) {
             data[`${key}`] = `${sessionStorage.getItem(key)}`;
@@ -201,6 +203,7 @@
               window.location.href = "{{ url_for('home_bp.home') }}";
             }
           });
+          // window.location.href = "{{ url_for('home_bp.home') }}";
         } else {
           setTimeout(function() {
             location.reload()
