--- a/fractions/templates/Fraction_operation.html
+++ b/fractions/templates/Fraction_operation.html
@@ -1,4 +1,4 @@
-{% extends "layout_easy.html" %}
+{% extends "layout.html" %}
 {% block style %}
 
 .quo {
@@ -438,6 +438,24 @@ icon: "success",
 }
 }
 
+function right1(){
+if(document.getElementById("btn1").innerHTML==="Write all terms"){
+$("#myModal").modal('hide');
+document.getElementsByClassName('line1')[0].style.display = 'block';
+document.getElementById("btn1").innerHTML="Add all terms";
+document.getElementById("btn2").innerHTML="Write like terms together";
+document.getElementById("btn3").innerHTML="Add coefficient of each polynomial";
+document.getElementById("btn4").innerHTML="Add first value of each polynomial";
+}
+}
+function right2(){
+if(document.getElementById("btn3").innerHTML==="Add coefficient of each polynomial"){
+$("#myModal").modal('hide');
+document.getElementById("hint-btn").disabled = true;
+document.getElementById("hint-btn").style.backgroundColor = "grey";
+document.getElementsByClassName('line1')[1].style.display = 'block';
+}
+
 }
 
 
@@ -445,6 +463,14 @@ icon: "success",
 {% block chapter %}Fraction{% endblock %}
 {% block topic %}Fraction Operation{% endblock %}
 
+
+
+{% block hint %}
+<button class="btn btn-info" id="btn1" style="width: 100%; margin: 10px auto;" onclick="right1();">Write all terms</button>
+<button class="btn btn-info" id="btn2" style="width: 100%; margin: 10px auto;">Add first value of each polynomials</button>
+<button class="btn btn-info" id="btn3" style="width: 100%; margin: 10px auto;" onclick="right2();">Write all terms with same powers</button>
+<button class="btn btn-info" id="btn4" style="width: 100%; margin: 10px auto;">Add all coefficients</button>
+{% endblock %}
 
 {% block content %}
 <h5 class="card-title">{{ answer.que }}</h5>
@@ -500,9 +526,4 @@ icon: "success",
 <i class="fal fa-times wrong fa-2x" style="display: none; color: red"></i>
 
 <br>
-{% endblock %}
-
-{% block hint %}
-<p>Hint</p>
-<img src="{{ url_for('static', filename = 'images/frac_simplest_form.png') }}" alt="" style="width: 80%;">
 {% endblock %}
