--- a/fractions/templates/layout.html
+++ b/fractions/templates/layout.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>Practice</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename = "css/layout.css") }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename = 'css/layout.css') }}">
   <style>
     {% block style %}{% endblock %}
   </style>
@@ -32,23 +32,20 @@
     <div class="collapse navbar-collapse " id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link a1" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link a1" href="#">About Us</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link a1" href="#">Our Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link a1" href="#">Contact</a>
-        </li>
+					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="/logout">Logout</a>
+				</li>
       </ul>
     </div>
   </nav>
 
   <div class="container main">
-    <div class="card">
+    <div class="card" >
 
       <div class="card-header white" style="color: #0070BB; background-color:rgba(0,0,0,.03);">
         <h3>{% block chapter %}{% endblock %} - {% block topic %}{% endblock %}</h3>
@@ -61,7 +58,7 @@
           <li class="step0"></li>
         </ul>
       </div>
-      <div class="time-card">
+      <div class="time-card" style="height: 55vh;">
         <div class="card-body" style="width: 80%;">
 
           {% block content %}{% endblock %}
