--- a/home/templates/UserScore.html
+++ b/home/templates/UserScore.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'css/User.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
 
     <title>Score</title>
     <!-- Styles -->
@@ -20,29 +20,40 @@
 
 </head>
 <body>
-    <div class="container">
+  <nav id="n1" class="navbar navbar-expand-lg navbar-light mb-3 navbar-fixed-top nav white">
+		<a class="navbar-brand" href="#">Logo PhiloMath</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse " id="navbarSupportedContent">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link a1" href="{{ url_for('home_bp.home') }}">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="{{ url_for('home_bp.profile') }}">Profile</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link a1" href="/logout">Logout</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+
+
+    <div class="container" style="margin-top: 80px;">
         <div class="main-body">
-
-              <!-- Breadcrumb -->
-              <nav aria-label="breadcrumb" class="main-breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                  <li class="breadcrumb-item"><a href="javascript:void(0)">User</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">User Profile</li>
-                </ol>
-              </nav>
-              <!-- /Breadcrumb -->
-
-              <div class="row gutters-sm">
+      <div class="row gutters-sm">
                 <div class="col-md-4 mb-3">
-                  <div class="card">
+                  <div class="card" style="height:351px;">
                     <div class="card-body">
                       <div class="d-flex flex-column align-items-center text-center">
                         <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
                         <div class="mt-3">
                           <h4 style="text-transform:capitalize;">{{context.fname}} {{context.lname}}</h4>
                           <p class="text-secondary mb-1">Grade {{context.grade}}</p>
-                          <p class="text-muted font-size-sm">School name</p>
+                          <p class="text-muted font-size-sm">{{context.school}}</p>
                         </div>
                       </div>
                     </div>
@@ -75,7 +86,7 @@
                           <h6 class="mb-0">School Name</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                          D.J.Sanghvi
+                          {{context.school}}
                         </div>
                       </div>
                       <hr>
@@ -123,7 +134,8 @@
 
                           <div id='myDiv2'><!-- Plotly chart will be drawn inside this DIV --></div>
 
-
+                          <button class="btn btn-info" onclick="show('algebra');">View more</button>
+                          
                         </div>
                       </div>
                     </div>
@@ -134,29 +146,30 @@
 
 
                           <div id='myDiv'><!-- Plotly chart will be drawn inside this DIV --></div>
-
+                          <button class="btn btn-info" onclick="show('fraction');">View more</button>
+                          
 
                         </div>
                       </div>
                     </div>
 
                   </div>
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <h6 class="d-flex align-items-center mb-3 "><i class="material-icons text-info mr-2"></i>Algebra</h6>
+                  <div class="row" style="margin-bottom: 3rem;margin-top: 3rem;" >
+                    <div class="col-sm-6" id="algebra" style="display: none;">
+                      <h6 class="d-flex align-items-center mb-3 " style="font-size: 2rem;"><i class="material-icons text-info mr-2"></i>Algebra</h6>
                       {% for key,value in algebra.items() %}
-                      <small>{{key}}</small>
-                      <div class="progress mb-3" style="height: 5px">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: {{value}}%" aria-valuenow="{{value}}" aria-valuemin="0" aria-valuemax="100"></div>
+                      <small style="text-transform: uppercase;">{{key}}  ({{value}}%)</small>
+                      <div class="progress mb-3" style="height: 10px">
+                        <div class="progress-bar bg-primary" role="progressbar" title="{{value}}%" style=" height: 10px;width: {{value}}%" aria-valuenow="{{value}}" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                         {% endfor %}
                     </div>
-                    <div class="col-sm-6">
-                      <h6 class="d-flex align-items-center mb-3"><i class="material-icons text-info mr-2"></i>Fraction</h6>
+                    <div class="col-sm-6" id="fraction" style="display: none;">
+                      <h6 class="d-flex align-items-center mb-3" style="font-size: 2rem;"><i class="material-icons text-info mr-2"></i>Fraction</h6>
                       {% for key,value in fraction.items() %}
-                      <small>{{key}}</small>
-                      <div class="progress mb-3" style="height: 5px">
-                        <div class="progress-bar bg-primary" role="progressbar" style="width: {{value}}%" aria-valuenow="{{value}}" aria-valuemin="0" aria-valuemax="100"></div>
+                      <small style="text-transform: uppercase;">{{key}}  ({{value}}%)</small>
+                      <div class="progress mb-3" style="height: 10px ; " >
+                        <div class="progress-bar bg-primary" role="progressbar" title="{{value}}%" style="height:10px;width: {{value}}%" aria-valuenow="{{value}}" aria-valuemin="0" aria-valuemax="100"></div>
                       </div>
                         {% endfor %}
                     </div>
@@ -197,6 +210,10 @@ var layout = {
 Plotly.newPlot('myDiv', fraction, layout);
 
 Plotly.newPlot('myDiv2', algebra, layout);
+
+function show(param) {
+  document.getElementById(param).style.display="block";
+}
 
 </script>
 
